# allen_v1_chen_2022_jax

./: .gitignore  CLAUDE.md  LICENSE  OPTIMIZATION_PLAN.md  README.md  WEEKLY_REPORT_20260308.md  WORK_STATE_20260306.md  WORK_STATE_20260308.md  WORK_STATE_20260308_2100.md  WORK_STATE_20260308_2130.md  WORK_STATE_20260308_2140.md  WORK_STATE_20260308_2245.md  main.py  pyproject.toml
configs/: config.yaml
configs/network/: default.yaml
configs/task/: 10class.yaml  evidence.yaml  garrett.yaml  mnist.yaml  vcd_grating.yaml
configs/training/: default.yaml
experiments/baseline_vs_brainstate/: DETAILED_EXPERIMENT_REPORT.md  detailed_experiment_report.py  experiment_report.md
experiments/baseline_vs_brainstate/obsidian_report/: README.md  V1 SNN 训练方案对比实验报告.md
experiments/baseline_vs_brainstate/obsidian_report/.obsidian/: app.json
experiments/weekly_report_figures/: generate_figures.py
notebooks/: 00_data_setup.ipynb  01_spike_functions.ipynb  02_glif3_single_neuron.ipynb  03_lgn_visualization.ipynb  04_sparse_connectivity.ipynb  05_network_loading.ipynb  06_forward_pass_demo.ipynb
scripts/: benchmark.py  benchmark_optimizations.py  convert_checkpoint.py  debug_billeh_params.py  debug_brainstate_garrett.py  debug_glif3_brainstate.py  debug_iodim_gradients.py  debug_spike_rate.py  plot_comparison.py  plot_training.py  plot_training_comparison.py  test_billeh_brainstate.py  test_loss_scale.py  test_readout_training.py  test_training_brainstate.py  train.py  train_brainstate.py  train_iodim_fixed.py  train_iodim_garrett.py  train_iodim_garrett_v2.py  train_iodim_garrett_v3.py  train_iodim_quick_test.py  validate_lgn_migration.py
src/v1_jax/: __init__.py
src/v1_jax/compat/: __init__.py  jax_compat.py
src/v1_jax/lgn/: __init__.py  bmtk_lgn.py  lgn_model.py  params_loader.py  spatial_filter.py  temporal_filter.py
src/v1_jax/models/: __init__.py  readout.py  v1_network.py  v1_network_brainstate.py
src/v1_jax/nn/: __init__.py  connectivity_brainstate.py  constraints.py  glif3_brainstate.py  glif3_cell.py  sparse_layer.py  spike_functions.py  synaptic.py
src/v1_jax/training/: __init__.py  distributed.py  distributed_zero.py  loss_functions.py  regularizers.py  trainer.py  trainer_brainstate.py
src/v1_jax/utils/: __init__.py  checkpoint.py  visualization.py
tests/: __init__.py  conftest.py  test_glif3_cell.py  test_lgn_model.py  test_losses.py  test_readout.py  test_sparse_layer.py  test_spike_functions.py  test_stim_generator.py  test_trainer.py  test_v1_network.py
tests/tf_comparison/: __init__.py  conftest.py  test_glif3_tf.py  test_lgn_tf.py  test_spike_functions_tf.py
weekly_report_20260308/: WEEKLY_REPORT_20260308.md
