[project]
name = "allen-v1-chen-2022-jax"
version = "0.1.0"
description = "JAX implementation of V1 visual cortex model (Chen et al. Science Advances 2022)"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Yinzi", email = "yinzi@example.com"},
]
keywords = ["jax", "neuroscience", "spiking-neural-networks", "v1-cortex", "glif3"]

dependencies = [
    "jax[cuda12]>=0.4.25",
    "jaxlib>=0.4.25",
    "optax>=0.2.0",
    "orbax-checkpoint>=0.5.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "h5py>=3.9.0",
    "scipy>=1.11.0",
    "matplotlib>=3.7.0",
    "tqdm>=4.65.0",
    "tensorflow>=2.20.0",
    "bmtk>=1.1.4",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "brainevent>=0.0.6",
    "brainstate>=0.2.10",
    "warp-lang>=1.12.0",
    "braintrace>=0.1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-xdist>=3.3.0",
    "tensorflow>=2.15.0",
]
cpu = [
    "jax>=0.4.25",
    "jaxlib>=0.4.25",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/v1_jax"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "benchmark: Performance benchmarks",
    "slow: Slow tests (>1min)",
    "gpu: Tests requiring GPU",
]
